# pinified

./: .gitignore  README.md  agents.py  database.py  email_service.py  graph.py  leads.db  llm.py  main.py  mlmodel.py  models.py  pyproject.toml  score.py  train.py  vectordb.py  whatsapp.py
data/: pinifiedcsv.csv
