[project]
name = "pinified"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "openai>=2.31.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "pytoml>=0.1.21",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
    "twilio>=9.10.4",
    "uvicorn>=0.44.0",
]
